<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酱油微播</string>
    <string name="app_version">1.0.1</string>
    <string name="app_version_description">Andoird版：1.0.1</string>
    <string name="playing">正在播放</string>
    <string name="jywave_title_en">jywave.com</string>
    <string name="action_settings">Settings</string>
    <string name="downloading">正在下载</string>
    <string name="click_to_download">点击下载</string>
    <string name="click_to_play">点击播放</string>
    <string name="cancel_downloading">取消下载</string>
    <string name="resume_downloading">恢复下载</string>
    <string name="pause_downloading">暂停下载</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_network_connection_toast">亲，您的网络貌似不能连接，请检查一下</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>
    <string name="none">无</string>
    <string name="okay">确定</string>
    <string name="me">我</string>
    <string name="more">更多</string>
    <string name="eps">节目</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="sending">发送中&#8230;</string>
    <string name="sent_successfully">发送成功</string>
    <string name="sent_failed">发送失败</string>
    <string name="settings">设置</string>
    <string name="sleep_timer">睡眠定时</string>
    <string name="sleep_timer_15mins">15分钟</string>
    <string name="sleep_timer_30mins">30分钟</string>
    <string name="sleep_timer_1hour">1小时</string>
    <string name="sleep_timer_2hours">2小时</string>
    <string name="sleep_timer_stop_when_ep_ends">单集播放完成后停止</string>
    <string name="xlistview_header_hint_normal">下拉同步</string>
    <string name="xlistview_header_hint_ready">松开同步数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次同步时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- Tab Me -->
    <string name="my_downloads">我的下载</string>
    <!-- Tab More -->
    <string name="about_jywave">关于酱油微播</string>
    <string name="about_jywave_content">IT男的打酱油之作，听过之后你就会知道，其实并不酱油。他们胸怀祖国，团结协作，偶尔忧国忧民外加小清新，希望你能喜欢这里的音乐和话题讨论，并为我们提交评价，说出你的想法。我们同样欢迎你在新浪微博、人人、豆瓣中关注酱油微播跟我们互动起来，所有往期节目下载请移步至酱油微播官网www.jywave.com</string>
    <string name="podcasters">主播们</string>
    <string name="feedback">意见反馈</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="renren">人人网</string>
    <string name="renren_site">人人小站</string>
    <string name="douban_site">豆瓣小站</string>
    <string name="qq_group">QQ群</string>
    <string name="qq_group_content">183875737</string>
    <string name="weixin">微信</string>
    <string name="weixin_moment">微信朋友圈</string>
    <string name="weixin_is_not_installed">微信未安装，安装了微信才能分享呢~~</string>
    <string name="weixin_content">jiangyouwave</string>
    <string name="official_site">官网</string>
    <string name="copyright_content">本软件中播客节目所使用音乐均来自互联网，仅供试听之用，请勿用于商业用途。软件创意、设计版权归酱油微播所有。</string>
    <string name="please_type_your_suggestion_here">请在这里写下您对酱油微播节目和本软件的意见和建议，谢谢</string>
    <string name="hint_feedback_nickname">您的名字(可选)</string>
    <string name="hint_feedback_content">您的建议</string>
    
    <!-- Share EP Menu -->
    <string name="share_ep">分享单集</string>
    
    <!-- My Downloads Page -->
    <string name="no_downloads">亲，你还没下载节目呢，快回去</string>
    
    
    <!-- Toast Message -->
    <string name="network_conn_error_try_again_later">您的网络连接存在问题，请检查后重试</string>
    <string name="service_error_try_again_later">数据服务出错，请稍后重试。</string>
</resources>