<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuSleepTimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/dark_blue_1" >

        <TextView
            android:id="@+id/txtMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/dark_blue_1"
            android:gravity="center_vertical"
            android:text="@string/sleep_timer"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/btn_popup_menu"
            android:text="@string/okay" 
            android:textColor="@color/white"
            >
        </Button>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rgSleepTimerOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_player_back" >

        <RadioButton
            android:id="@+id/rbSleepTimerNone"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:button="@drawable/radiobutton_popup_menu"
            android:paddingLeft="50dp"
            android:text="@string/none"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@color/black" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbSleepTimer15mins"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:button="@drawable/radiobutton_popup_menu"
            android:paddingLeft="50dp"
            android:text="@string/sleep_timer_15mins"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@color/black" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbSleepTimer30mins"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:button="@drawable/radiobutton_popup_menu"
            android:paddingLeft="50dp"
            android:text="@string/sleep_timer_30mins"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@color/black" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbSleepTimer1hour"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:button="@drawable/radiobutton_popup_menu"
            android:paddingLeft="50dp"
            android:text="@string/sleep_timer_1hour"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@color/black" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbSleepTimer2hours"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:button="@drawable/radiobutton_popup_menu"
            android:paddingLeft="50dp"
            android:text="@string/sleep_timer_2hours"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:background="@color/black" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbSleepTimerStopWhenEpEnds"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:button="@drawable/radiobutton_popup_menu"
            android:paddingLeft="50dp"
            android:text="@string/sleep_timer_stop_when_ep_ends"
            android:textColor="@color/white" />
    </RadioGroup>

</LinearLayout>