<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/gray_app_bg"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/main_tab_eps"
                    style="@style/main_tab_eps"
                    android:layout_weight="1.0"
                    android:drawablePadding="10dp"
                    android:text="@string/eps" />

                <RadioButton
                    android:id="@+id/main_tab_podcasters"
                    style="@style/main_tab_podcasters"
                    android:layout_weight="1.0"
                    android:drawablePadding="10dp"
                    android:text="@string/podcasters" />
                
                <RadioButton
                    android:id="@+id/main_tab_me"
                    style="@style/main_tab_me"
                    android:layout_weight="1.0"
                    android:drawablePadding="10dp"
                    android:text="@string/me" />

                <RadioButton
                    android:id="@+id/main_tab_more"
                    style="@style/main_tab_more"
                    android:layout_weight="1.0"
                    android:drawablePadding="10dp"
                    android:text="@string/more" />
            </RadioGroup>

            <!--
                 <TextView
                android:id="@+id/main_tab_new_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginLeft="60dip"
                android:layout_marginTop="1dip"
                android:background="@drawable/tips"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="gone" />
            -->
        </FrameLayout>
    </LinearLayout>

</TabHost>