<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_app_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/blue_app_main" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/playing"
            android:src="@drawable/btn_appbar_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnPlaying"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/playing"
            android:src="@drawable/btn_appbar_playing" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/dark_blue_1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/please_type_your_suggestion_here"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/option_group_layout"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/txtNickname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:background="@color/white"
                    android:hint="@string/hint_feedback_nickname"
                    android:inputType="textPersonName"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18sp" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_text" />

                <EditText
                    android:id="@+id/txtContent"
                    android:layout_width="fill_parent"
                    android:layout_height="280dp"
                    android:background="@color/white"
                    android:gravity="left"
                    android:hint="@string/hint_feedback_content"
                    android:inputType="textMultiLine"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_click_to_play_bg"
                android:clickable="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgBtnSendIco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_paper_plane" />

                <TextView
                    android:id="@+id/txtBtnSendLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>