<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/blue_app_main" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/playing"
            android:src="@drawable/btn_appbar_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_downloads"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnPlaying"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/playing"
            android:src="@drawable/btn_appbar_playing" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/dark_blue_1" >
    </LinearLayout>

    <com.jywave.ui.components.swipelistview.SwipeListView
        xmlns:swipe="http://schemas.android.com/apk/res-auto"
        android:id="@+id/listDownloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        swipe:swipeFrontView="@+id/front"
        swipe:swipeBackView="@+id/back"
        swipe:swipeActionLeft="reveal"
        swipe:swipeCloseAllItemsWhenMoveList="true"
        swipe:swipeMode="left"
        swipe:swipeOffsetLeft="270dip"
        swipe:swipeOpenOnLongPress="false" />

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_downloads"
        android:textColor="@color/black"
        android:textSize="14.0sp"
        android:visibility="gone" />

</LinearLayout>