<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuSleepTimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_player_back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/dark_blue_1" >

        <TextView
            android:id="@+id/txtMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/dark_blue_1"
            android:gravity="center_vertical"
            android:text="@string/share_ep"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/hsvShareTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
<RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp" >

                <ImageButton
                    android:id="@+id/btnWeixin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ico_share_weixin" />

                <TextView
                    android:id="@+id/txtWeixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="65dp"
                    android:text="@string/weixin"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp" >

                <ImageButton
                    android:id="@+id/btnWeixinMoment"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ico_share_weixin_moment" />

                <TextView
                    android:id="@+id/txtWeixinMoment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="65dp"
                    android:text="@string/weixin_moment"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp" >

                <ImageButton
                    android:id="@+id/btnSinaWeibo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ico_share_sina_weibo" />

                <TextView
                    android:id="@+id/txtSinaWeibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="65dp"
                    android:text="@string/sina_weibo"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp" >

                <ImageButton
                    android:id="@+id/btnRenren"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ico_share_renren" />

                <TextView
                    android:id="@+id/txtRenren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="65dp"
                    android:text="@string/renren"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_player_menu_cancel"
        android:text="@string/cancel" 
        android:textColor="@color/white"/>

</LinearLayout>