<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/blue_app_main" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/me"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

        <ImageButton
            android:id="@+id/btnPlaying"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/playing"
            android:src="@drawable/btn_appbar_playing" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/dark_blue_1" >
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/option_group_layout"
        android:divider="@color/gray_text"
        android:orientation="vertical"
        android:showDividers="middle" 
        >

        <RelativeLayout
            android:id="@+id/optMyDownloads"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/list_item_bg"
            android:clickable="true" >

            <TextView
                android:id="@+id/txtMyDownloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/my_downloads"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ico_option_arrow_right" >
            </ImageView>
        </RelativeLayout>

        
    </LinearLayout>



</LinearLayout>